# richdocs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: api.md  configuration.md  index.md
src/richdocs/: __init__.py  _api_index.py  _assets.py  _config.py  _jupyter.py  _linkify.py  _nav_priority.py  _symbol_index.py  _toc_labels.py  plugin.py
src/richdocs/assets/javascripts/: api-navigation-loader.js  api-navigation.mjs  hide-empty-toc.js  live-code-ansi.mjs  live-code-codemirror.mjs  live-code-loader.js  live-code-pyodide-worker.mjs  live-code-pyodide.mjs  live-code.mjs  shiki-highlight.mjs  shiki-loader.js  sync-toc-labels-loader.js  sync-toc-labels.mjs  toc-collapsible-loader.js  toc-collapsible.mjs  toc-scrollspy.js
src/richdocs/assets/stylesheets/: extra.css  theme.css
src/richdocs/assets/templates/python/material/: attribute.html.jinja  children.html.jinja  class.html.jinja  enum_macros.jinja  style.css
src/richdocs/assets/templates/python/material/summary/: attributes.html.jinja
src/richdocs/assets/themes/: shades-of-purple-shiki.json
tests/: test_config_and_assets.py  test_linkify.py  test_nav_priority.py  test_symbol_index.py  test_v2_config.py  test_v3_config.py
